Fixed navigator on mobile

--- a/css/_nav.scss
+++ b/css/_nav.scss
@@ -11,3 +11,9 @@ nav.nav {
     }
   }
 }
+
+@media only screen and (max-width: 768px)  {
+  nav.nav a {
+    font-size: 1.6em;
+  }
+}
